--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soltrending - Submit & Pay</title>
+    <title>Soltrending - Submit details</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
